syntax = "proto3";

package scufflecloud.core.v1;

import "tinc/annotations.proto";

enum CaptchaProvider {
  // Unspecified enum value
  CAPTCHA_PROVIDER_UNSPECIFIED = 0 [(tinc.variant).visibility = SKIP];
  // Cloudflare Turnstile
  CAPTCHA_PROVIDER_TURNSTILE = 1;
}

message CaptchaChallengeResponse {
  CaptchaProvider provider = 1;
  string token = 2;
}
